--- a/app/components/session-detail/session-detail.component.html
+++ b/app/components/session-detail/session-detail.component.html
@@ -11,10 +11,9 @@
         <!--<td title="Altitude difference downhill in feet">AltDiffDownhill</td>
         <td title="Altitude difference uphill in feet">AltDiffUphill</td>-->
         <td title="Cadence rotations per minute">Cadence</td>
-        <td title="Absolute Distance in meters?" >Dist Abs</td>
-        <td title="Distance in meters?" >Dist</td>
-        <td title="Distance Downhill in meters?" >Dist Downhill</td>
-        <td title="Distance Uphill in meters?" >Dist Uphill</td>
+        <td title="Absolute Distance in miles" >Total Dist (mi)</td>
+        <td title="Distance in feet" >Dist (ft)</td>
+        <td title="Distance change in feet" >Dist Change (ft)</td>
         <td title="bpm" >HeartRate</td>
         <td title="" >IntensityZone</td>
         <td title="" >Rotations</td>
@@ -36,10 +35,12 @@
         <!--<td>{{datum.altitudeDiffDownhill}}</td>-->
         <!--<td>{{datum.altitudeDiffUphill}}</td>-->
         <td>{{datum.cadence}}</td>
-        <td>{{datum.distanceAbsolute | number:'.2-2'}}</td>
-        <td>{{datum.distance | number:'.2-2'}}</td>
-        <td>{{datum.distanceDownhill | number:'.2-2'}}</td>
-        <td>{{datum.distanceUphill | number:'.2-2'}}</td>
+        <td>{{datum.distanceAbsolute | metersToMiles | number:'.2-2'}}</td>
+        <td>{{datum.distance | metersToFeet | number:'.2-2'}}</td>
+        <td>
+            <p *ngIf="datum.distanceDownhill > 0">D {{datum.distanceDownhill | metersToFeet | number:'.2-2'}}</p>
+            <p *ngIf="datum.distanceUphill > 0">U {{datum.distanceUphill | metersToFeet | number:'.2-2'}}</p>
+            <p *ngIf="datum.distanceDownhill == 0 && datum.distanceUphill == 0"> - </p>
         <td>{{datum.heartrate}}</td>
         <td>{{datum.intensityZone}}</td>
         <td>{{datum.rotations}}</td>
