--- a/app/components/session-detail/session-detail.component.html
+++ b/app/components/session-detail/session-detail.component.html
@@ -23,8 +23,7 @@
         <td title="Temperature in Fahrenheit">Temp </td>
         <td title="Training Time in seconds" >TT</td>
         <td title="Absolute Training Time in minutes (with fractional seconds)" >TTAbs</td>
-        <td title="Training Time Downhill in seconds" >TTDownhill</td>
-        <td title="Training Time Uphill in seconds" >TTUphill</td>
+        <td title="Training Time Uphill or Downhill in seconds" >TT Up/Down</td>
     </tr>
     </thead>
     <tbody>
@@ -41,6 +40,7 @@
             <p *ngIf="datum.distanceDownhill > 0">D {{datum.distanceDownhill | metersToFeet | number:'.2-2'}}</p>
             <p *ngIf="datum.distanceUphill > 0">U {{datum.distanceUphill | metersToFeet | number:'.2-2'}}</p>
             <p *ngIf="datum.distanceDownhill == 0 && datum.distanceUphill == 0"> - </p>
+        </td>
         <td>{{datum.heartrate}}</td>
         <td>{{datum.intensityZone}}</td>
         <td>{{datum.rotations}}</td>
@@ -52,8 +52,11 @@
         <td>{{datum.temperature}}</td>
         <td>{{datum.trainingTime}}</td>
         <td>{{datum.trainingTimeAbsolute | secondsToMinutes}}</td>
-        <td>{{datum.trainingTimeDownhill}}</td>
-        <td>{{datum.trainingTimeUphill}}</td>
+        <td>
+            <p *ngIf="datum.trainingTimeDownhill > 0">D {{datum.trainingTimeDownhill}}</p>
+            <p *ngIf="datum.trainingTimeUphill > 0">U {{datum.trainingTimeUphill}}</p>
+            <p *ngIf="datum.trainingTimeDownhill == 0 && datum.trainingTimeUphill == 0"> - </p>
+        </td>
 
     </tr>
     </tbody>
