--- a/app/components/td-line-chart-page/td-line-chart-page.html
+++ b/app/components/td-line-chart-page/td-line-chart-page.html
@@ -1,9 +1,4 @@
-<h3>Training Line Data Chart</h3>
-<div>Activity Name: {{train?.name}}</div>
-<div>Activity Date: {{train?.date}}</div>
-<div>Activity Type: {{train?.activityType }}</div>
-
-
+<training-header [training]="train"></training-header>
 <fieldset>
     <legend>Lines</legend>
     <input type="checkbox" (change)="toggleSpeed()" value="Speed" checked />Speed
