added font awesome and moment.

--- a/app/components/session-detail/session-detail.component.html
+++ b/app/components/session-detail/session-detail.component.html
@@ -28,16 +28,16 @@
         <td>{{datum.calories | number:'.2-2'}}</td>
         <td>{{datum.altitude}}</td>
         <td>
-            <p *ngIf="datum.altitudeDiffDownhill > 0">D {{datum.altitudeDiffDownhill}}</p>
-            <p *ngIf="datum.altitudeDiffUphill > 0">U {{datum.altitudeDiffUphill}}</p>
+            <p *ngIf="datum.altitudeDiffDownhill > 0"><i class="fa fa-arrow-down" aria-hidden="true"></i> {{datum.altitudeDiffDownhill}}</p>
+            <p *ngIf="datum.altitudeDiffUphill > 0"><i class="fa fa-arrow-up" aria-hidden="true"></i>  {{datum.altitudeDiffUphill}}</p>
             <p *ngIf="datum.altitudeDiffDownhill == 0 && datum.altitudeDiffUphill == 0"> - </p>
         </td>
         <td>{{datum.cadence}}</td>
         <td>{{datum.distanceAbsolute | metersToMiles | number:'.2-2'}}</td>
         <td>{{datum.distance | metersToFeet | number:'.2-2'}}</td>
         <td>
-            <p *ngIf="datum.distanceDownhill > 0">D {{datum.distanceDownhill | metersToFeet | number:'.2-2'}}</p>
-            <p *ngIf="datum.distanceUphill > 0">U {{datum.distanceUphill | metersToFeet | number:'.2-2'}}</p>
+            <p *ngIf="datum.distanceDownhill > 0"><i class="fa fa-arrow-down" aria-hidden="true"></i>{{datum.distanceDownhill | metersToFeet | number:'.2-2'}}</p>
+            <p *ngIf="datum.distanceUphill > 0"><i class="fa fa-arrow-up" aria-hidden="true"></i> {{datum.distanceUphill | metersToFeet | number:'.2-2'}}</p>
             <p *ngIf="datum.distanceDownhill == 0 && datum.distanceUphill == 0"> - </p>
         </td>
         <td>{{datum.heartrate}}</td>
@@ -52,8 +52,8 @@
         <td>{{datum.trainingTime}}</td>
         <td>{{datum.trainingTimeAbsolute | secondsToMinutes}}</td>
         <td>
-            <p *ngIf="datum.trainingTimeDownhill > 0">D {{datum.trainingTimeDownhill}}</p>
-            <p *ngIf="datum.trainingTimeUphill > 0">U {{datum.trainingTimeUphill}}</p>
+            <p *ngIf="datum.trainingTimeDownhill > 0"><i class="fa fa-arrow-down" aria-hidden="true"></i> {{datum.trainingTimeDownhill}}</p>
+            <p *ngIf="datum.trainingTimeUphill > 0"><i class="fa fa-arrow-up" aria-hidden="true"></i>  {{datum.trainingTimeUphill}}</p>
             <p *ngIf="datum.trainingTimeDownhill == 0 && datum.trainingTimeUphill == 0"> - </p>
         </td>
 
