--- a/app/components/statistics-view/statistics-view.component.html
+++ b/app/components/statistics-view/statistics-view.component.html
@@ -1,2 +1,2 @@
-<h2>Statistics </h2>
-<p>Future functionality</p>
+<h2>Calorie count for last N activities </h2>
+<bar-chart *ngIf="trainingSessions" [sessions]="trainingSessions"  width="500" height="130"></bar-chart>
