--- a/app/components/activity-header/activity-header.component.html
+++ b/app/components/activity-header/activity-header.component.html
@@ -1,14 +1,14 @@
 <table>
     <tr>
         <td>Activity Name</td>
-        <td>{{training?.name}}</td>
+        <td>{{activity?.name}}</td>
     </tr>
     <tr>
         <td>Activity Date</td>
-        <td>{{training?.date}}</td>
+        <td>{{activity?.date}}</td>
     </tr>
     <tr>
         <td>Activity Type</td>
-        <td>{{training?.activityType }}</td>
+        <td>{{activity?.type }}</td>
     </tr>
 </table>
