--- a/app/components/td-line-chart-page/td-line-chart-page.html
+++ b/app/components/td-line-chart-page/td-line-chart-page.html
@@ -1,4 +1,4 @@
-<training-header [training]="train"></training-header>
+<activity-header [activity]="activity"></activity-header>
 <fieldset>
     <legend>Lines</legend>
     <input type="checkbox" (change)="toggleSpeed()" value="Speed" checked />Speed
