--- a/app/components/list-view/list-view.component.html
+++ b/app/components/list-view/list-view.component.html
@@ -1,4 +1,4 @@
-<h2>My Training Sessions </h2>
+<h2>My Activities </h2>
 <table class="trainingDataTable">
     <thead>
     <tr>
@@ -8,21 +8,21 @@
         <td title="Total time in ?">Time</td>
         <td title="Total distance in miles">Distance</td>
         <td title="Total calories">Calories</td>
-        <td>View Data</td>
-        <td>View Chart</td>
+        <td></td>
+        <td></td>
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let session of trainingSessions">
+    <tr *ngFor="let session of activities">
         <td>{{session.date}}</td>
         <td>{{session.name}}</td>
-        <td>{{session.activityType}}</td>
+        <td>{{session.type}}</td>
         <td>{{session.totalTime }}</td>
         <td>{{session.totalDistance | metersToMiles| number:'.0-2'}}</td>
         <td>{{session.totalCalories | number:'.0-0'}}</td>
         <td><button (click)="onSelect(session.id)">Table</button></td>
         <td>
-            <button (click)="onSelectLine(session.id)">Line</button>/<button (click)="onSelectArea(session.id)">Area</button>
+            <button (click)="onSelectLine(session.id)">Chart</button>
         </td>
     </tr>
     </tbody>
