data model changes

--- a/app/components/statistics-view/statistics-view.component.html
+++ b/app/components/statistics-view/statistics-view.component.html
@@ -1,2 +1,2 @@
-<h2>Calorie count for last N activities </h2>
-<bar-chart *ngIf="trainingSessions" [sessions]="trainingSessions"  width="500" height="130"></bar-chart>
+<h3>Calorie count for last 6 activities </h3>
+<bar-chart *ngIf="activities" [sessions]="activities"  width="450" height="150"></bar-chart>
