--- a/app/components/records-view/records-view.component.html
+++ b/app/components/records-view/records-view.component.html
@@ -2,4 +2,4 @@
 <bar-chart *ngIf="calBurnActs" [sessions]="calBurnActs"  metric="totalCalories" width="450" height="150"></bar-chart>
 
 <h3>6 Longest Distance Activities in Miles</h3>
-<bar-chart *ngIf="longestActs" [sessions]="longestActs"  metric="totalDistance" width="450" height="150"></bar-chart>l
+<bar-chart *ngIf="longestActs" [sessions]="longestActs"  metric="totalDistance" width="450" height="150"></bar-chart>
